--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
 
             <div class="col-3 bg-light">
-                <iframe src="shopping-cart.html" style="margin: auto;></iframe>
+                <iframe src="shopping-cart.html" style="margin: auto"></iframe>
             </div>
         </div>
              
